# hydrogen

./: .clang-format  .gitignore  CMakeLists.txt  README.md
docs/: grammar.md
src/: alloc.hpp  ast.hpp  gen.hpp  main.cpp  parse.hpp  token.hpp
tests/: tests.cpp
tests/bool/: bool.hy
tests/hello_world/: hello_world.hy
tests/incdec/: expected.txt  incdec.hy
tests/loops/: expected.txt  loops.hy
tests/simple_math/: expected.txt  simple_math.hy
tests/string/: expected.txt  string.hy
